--- a/__testfixtures__/.eslintrc.yml
+++ b/__testfixtures__/.eslintrc.yml
@@ -2,3 +2,5 @@ rules:
   # Skip autoformatting to allow testing a range of import formats
   "prettier/prettier": "off"
   "no-unused-vars": "off"
+  "no-console": "off"
+  "no-undef": "off"
